manifests/05a_argocd-repo-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  selector:
    matchLabels:
      app: argocd-repo-server
  template:
    metadata:
      labels:
        app: argocd-repo-server
    spec:
      containers:
      - name: argocd-repo-server
        image: argoproj/argocd-repo-server:latest
        command: [/argocd-repo-server]
        ports:
          - containerPort: 8081
